force-app/main/default/objects/Tipo_de_tanque__c/Tipo_de_tanque__c.object-meta.xml
<CustomObject>
    <label>Tipo de tanque</label>
    <nameField>
        <label>Tipo de tanque Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipos de tanque</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>