force-app/main/default/objects/Tipo_de_tanque__c/fields/Capacidad__c.field-meta.xml
<CustomField>
    <fullName>Capacidad__c</fullName>
    <label>Capacidad</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>