force-app/main/default/objects/Tipo_de_tanque__c/fields/Precio_de_lista__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_lista__c</fullName>
    <label>Precio de lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>